# cmd/api/docs/swagger.json
@@ -1418,7 +1418,12 @@
         },
         "/orders/invoice": {
             "get": {
-                "description": "Generates a PDF invoice for the specified order ID and returns it as a downloadable file.",
+                "security": [
+                    {
+                        "BearerTokenAuth": []
+                    }
+                ],
+                "description": "Generates and returns a PDF invoice for the specified order ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1428,8 +1433,15 @@
                 "tags": [
                     "Orders"
                 ],
-                "summary": "Print Invoice",
+                "summary": "Generate Invoice PDF",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Order ID",
@@ -1446,13 +1458,13 @@
                         }
                     },
                     "400": {
-                        "description": "Invalid request parameters or processing error",
+                        "description": "Bad request: Invalid order ID or missing parameter",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
                     },
                     "502": {
-                        "description": "Error generating the invoice",
+                        "description": "Bad gateway: Error generating or processing the invoice",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -2748,6 +2760,9 @@
             ],
             "properties": {
                 "address_id": {
+                    "type": "integer"
+                },
+                "coupon_id": {
                     "type": "integer"
                 },
                 "payment_id": {
